<resources>
    <string name="app_name">正道金服理财</string>
    <string name="close">关闭</string>
    <string name="common_net_error">网络不给力,请检查网络连接</string>
    <string name="common_sure">确定</string>
    <string name="common_cancle">取消</string>
    <string name="common_delete">删除</string>
    <string name="common_save">保存</string>
    <string name="common_uptate">编辑</string>
    <string name="common_danwei">元</string>
    <string name="common_service_phone">客服热线400-690-9898</string>
    <string name="common_sd_error">内存不足或者不存在,请检查!</string>
    <string name="common_contract_company">咨询客服</string>
    <string name="common_notication">温馨提示</string>
    <string name="common_submint">提交</string>
    <string name="dialog_know_title">知道了</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="no_more">没有更多了</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="empty_message">暂无记录</string>
    <string name="error_message">请求失败!请检查网络</string>
    <string name="empty_button">重新加载</string>
    <string name="loading_button">重新加载</string>
    <string name="error_button">重新加载</string>
    <string name="no_network">当前网络不可用</string>
    <string name="http_timeout">网络错误，请稍后重试</string>
    <string name="financial_title">理财</string>
    <string name="fund_title">发现</string>
    <string name="home_title">正道</string>
    <string name="mine_title">我的</string>
    <string name="financial_title_df">默认</string>
    <string name="financial_title_zz">债转</string>
    <string name="financial_title_zt">直投</string>
    <string name="financial_item_earnings">年化</string>
    <string name="financial_item_data">收益天数</string>
    <string name="financial_item_amount">剩余可投</string>
    <string name="financial_zt_title_tv">直投</string>
    <string name="financial_zz_title_tv">债转</string>
    <string name="listview_header_hint_normal">pull to refresh</string>
    <string name="listview_header_hint_release">release to start refresh</string>
    <string name="listview_header_last_time">last update：</string>
    <string name="listview_loading">loading...</string>
    <string name="nomore_loading">no more to be loaded</string>
    <string name="refresh_done">refresh done</string>
    <string name="money_separator">,</string>
    <string name="defalut_money_separator">###,###,##0.00</string>
    <string name="defalut_money_00">#####0.00</string>
    <string name="defalut_money">###,###</string>
    <string name="defalut_money_no_split">######</string>
    <string name="finace_empty_project">暂无符合条件项目</string>
    <string name="login_title">登录</string>
    <string name="login_password_error">登录密码不正确</string>
    <string name="login_phone_error">电话号码未注册</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="regist_title">注册</string>
    <string name="regist_inputphone_error">请输入正确的手机号码</string>
    <string name="regist_password_error">登录密码格式不正确 必须为6-16个字符，数字和英文的组合</string>
    <string name="regist_code_error">请输入正确的验证码</string>
    <string name="regist_success">注册成功</string>
    <string name="regist_fail">注册失败</string>
    <string name="regist_input_phonenumber_hint">输入手机号码</string>
    <string name="regist_code_hint">输入验证码</string>
    <string name="regist_password_hint">设置6-16位数字+英文组合的登录密码</string>
    <string name="regist_inviter_title">邀请人手机号</string>
    <string name="regist_inviter_hint">输入邀请码/邀请人手机号(选填)</string>
    <string name="regist_submit_btn">注册领红包</string>
    <string name="regist_agreement_hint">我已阅读并同意《正道金服服务协议》</string>
    <string name="regist_bottom_title_hint">上海银行资金监管</string>
    <string name="regist_servers_title">正道金服服务协议</string>
    <string name="mine_all_assets_tv">总资产(元)</string>
    <string name="mine_all_earnings_tv">累计收益(元)</string>
    <string name="mine_duein_moneys_tv">待收金额(元)</string>
    <string name="mine_account_banlance_tv">账户余额(元)</string>
    <string name="mine_withdraw_deposit_tv">提现</string>
    <string name="mine_recharge_tv">充值</string>
    <string name="mine_invest_title">我的投资</string>
    <string name="mine_calendar_title">回款日历</string>
    <string name="mine_redpacket_coupon_title">红包卡券</string>
    <string name="mine_buiba_title">兑换中心</string>
    <string name="mine_invite_title">邀请好友</string>
    <string name="mine_riskassess_title">风险评估</string>
    <string name="mine_onlineservice_title">在线客服</string>
    <string name="mine_invite_hint">获好友投资2‰正经值</string>
    <string name="mine_riskassess_hint">进取型</string>
    <string name="mine_balance_notication">平台已对接上海银行资金存管，原汇付天下内的余额不可用于投资,仅支持提现,为了您的资金安全,请及时登录官网进行提现</string>
    <string name="rmcalendar_top_title">回款日历</string>
    <string name="rmcalendar_month_allmoney_title">本月应收</string>
    <string name="rmcalendar_month_duein_title">本月待收</string>
    <string name="rmcalendar_day_no_duein_title">今日无回款</string>
    <string name="rmcalendar_more_earning_title">赚取更多收益</string>
    <string name="message_top_title">消息</string>
    <string name="message_top_right">标记已读</string>
    <string name="message_top_right_all_read">已全读</string>
    <string name="message_look_detail">查看详情</string>
    <string name="personcenter_top_title">账户中心</string>
    <string name="personcenter_nick_empty_tv">你未设置昵称</string>
    <string name="personcenter_namecertification_title">实名认证</string>
    <string name="personcenter_bankcard_title">银行卡管理</string>
    <string name="personcenter_updateloginpassword_title">修改登录密码</string>
    <string name="personcenter_updatedealpassword_title">支付密码管理</string>
    <string name="personcenter_gesturepassword_title">手势密码</string>
    <string name="personcenter_exitapp_title">退出登录</string>
    <string name="personcenter_addbankcard_tv">添加银行卡</string>
    <string name="personcenter_namecertification_dialog_tilte">您尚未进行实名认证</string>
    <string name="personcenter_namecertification_dialog_content">实名认证（资金托管）能有效保障您的资金安全，使资金进出均受银行监管。</string>
    <string name="setting_top_title">设置</string>
    <string name="setting_message_title">消息推送</string>
    <string name="setting_cache_title">清除缓存</string>
    <string name="setting_contact_title">联系我们</string>
    <string name="setting_about_title">关于我们</string>
    <string name="setting_share_title">分享给财友</string>
    <string name="setting_company_title">正道金服</string>
    <string name="setting_checkversion_tv">检查更新</string>
    <string name="setting_updataversion">立即升级</string>
    <string name="setting_dialog_delete">以后再说</string>
    <string name="setting_dialog_sure">立即安装</string>
    <string name="contact_company_top_title">联系我们</string>
    <string name="contact_company_phone">客服热线</string>
    <string name="contact_company_time">工作日:&#160;9：30-20:00:&#160;节假日:&#160;9：30-18:00</string>
    <string name="contact_company_web">www.zdjfu.com</string>
    <string name="contact_company_web_title">正道金服官方网站</string>
    <string name="contact_company_weixin_tltle">微信公众号</string>
    <string name="contact_company_qq_tltle">QQ交流群</string>
    <string name="contact_company_qq_number">463637911</string>
    <string name="contact_company_weixin">zdjfu161208</string>
    <string name="contact_company_phoneone">400-690-9898</string>
    <string name="contact_company_phonetwo">0571-56981476</string>
    <string name="contact_company_name">杭州云翳网络科技有限公司</string>
    <string name="contact_company_address">杭州市西湖区文一西路767号西溪国际商务中心E座909</string>
    <string name="persondetail_top_title">个人资料</string>
    <string name="persondetail_headpicture_title">头像</string>
    <string name="persondetail_phone_title">手机号码</string>
    <string name="persondetail_nick_title">昵称</string>
    <string name="persondetail_nick_hint">您还未设置昵称</string>
    <string name="persondetail_ablum">手机相册</string>
    <string name="persondetail_camera">拍照模式</string>
    <string name="update_nick_top_titlle">昵称设置</string>
    <string name="update_nick_hint">请设置4-25个字符昵称</string>
    <string name="update_nick_save">保存</string>
    <string name="update_nick_input_out">昵称不能超过25个字符</string>
    <string name="update_nick_success">昵称设置成功</string>
    <string name="update_nick_input_empty">昵称不能为空</string>
    <string name="bankcard_top_title">银行卡管理</string>
    <string name="bankcard_add_title">添加银行卡</string>
    <string name="bankcard_add_success">添加成功</string>
    <string name="bankcard_notication_canclecard">您已经绑定快捷卡，不能再换绑。若需解绑，请致电客服热线400-690-9898进行咨询。</string>
    <string name="bankcard_notication_title">温馨提示:</string>
    <string name="bankcard_notication_content">当您需要解除绑定当前银行卡,请确保账户可用余额=0,如账户可用余额>0时，请先申请提款，再解绑。</string>
    <string name="bankcard_unbind_title">银行卡解绑</string>
    <string name="bankcard_bind_title">已绑定</string>
    <string name="bankcard_dialog_title">提示</string>
    <string name="bankcard_dialog_content">您的可用余额>0，无法解除银行卡绑定</string>
    <string name="addbankcard_top_title">银行卡绑定</string>
    <string name="unbindbankcard_top_title">银行卡管理</string>
    <string name="unbindbankcard_phone">手机号:</string>
    <string name="unbindbankcard_code">验证码:</string>
    <string name="unbindbankcard_phone_hint">请输入银行卡预留手机号码</string>
    <string name="unbindbankcard_code_hint">请输入短信验证码</string>
    <string name="updateloginpassword_top_title">修改登录密码</string>
    <string name="updateloginpassword_old_psd_title">原登录密码：</string>
    <string name="updateloginpassword_new_psd_title">新登录密码：</string>
    <string name="updateloginpassword_sure_new_psd_title">再次确认登录密码：</string>
    <string name="updateloginpassword_notication_tv">密码由8-16位含数字/字母/符号组成</string>
    <string name="updateloginpassword_forget_psd_tv">忘记密码</string>
    <string name="updateloginpassword_sure_update_tv">确认修改</string>
    <string name="updateloginpassword_old_psd_hint">请输入原登录密码</string>
    <string name="updateloginpassword_new_psd_hint">请输入新密码</string>
    <string name="updateloginpassword_sure_new_psd_hint">请再次确认新密码</string>
    <string name="updateloginpassword_two_psd_error">两次密码输入不一致</string>
    <string name="updateloginpassword_old_psd_error">原登录密码错误</string>
    <string name="updateloginpassword_update_success">登录密码修改成功</string>
    <string name="forgetpsd_top_title">忘记密码</string>
    <string name="forgetpsd_inputphone_error">请输入正确的手机号码</string>
    <string name="forgetpsd_code_error">请输入正确的验证码</string>
    <string name="forgetpsd_password_error">请输入正确的密码</string>
    <string name="namecertification_name">姓名</string>
    <string name="namecertification_idcard">身份证</string>
    <string name="namecertification_next_tv">下一步</string>
    <string name="openshbankaccount_name">真实姓名</string>
    <string name="openshbankaccount_idcard">身份证号</string>
    <string name="openshbankaccount_name_hint">请输入真实姓名</string>
    <string name="openshbankaccount_idcard_hint">请输入有效的证件号码</string>
    <string name="openshbankaccount_notication_title">温馨提示:</string>
    <string name="openshbankaccount_next_tv">下一步</string>
    <string name="invitefriend_top_title">邀请好友</string>
    <string name="invitefriend_rule_title">邀请好友规则</string>
    <string name="invitefriend_awardreword_title">我的奖励记录</string>
    <string name="fund_signin_title">每日签到</string>
    <string name="fund_noobcontest_title">新手赢奖</string>
    <string name="fund_zjzrechange_title">正经值兑换</string>
    <string name="fund_more_title">更多></string>
    <string name="fund_zdjf_title">正道金服</string>
    <string name="fund_zdjf_content_title">银行存管&#160;三大保障</string>
    <string name="fund_news_title">媒体报道</string>
    <string name="paypwdmanager_callback_phone_title">找回认证手机号码</string>
    <string name="paypwdmanager_update_pwd_title">修改支付密码</string>
    <string name="paypwdmanager_forget_pwd_title">忘记支付密码</string>
    <string name="paypwdmanager_open_without_code_title">开通免密支付</string>
</resources>