<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/invite_friends_bg"
    >

    <Button
        android:id="@+id/invitefriend_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/dimen_45_dip"
        android:layout_marginRight="@dimen/dimen_45_dip"
        android:layout_centerHorizontal="true"
        android:background="@drawable/stroke_blue_solid_blue_radius30"
        android:gravity="center"
        android:text="@string/invitefriend_top_title"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_55_dip"
        />

    <TextView
        android:id="@+id/invitefriend_rule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/invitefriend_rule_title"
        android:textColor="@color/blue13"
        android:textSize="12sp"
        android:padding="18dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/dimen_25_dip"
        />


    <TextView
        android:id="@+id/invitefriend_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/invitefriend_awardreword_title"
        android:textColor="@color/blue13"
        android:textSize="12sp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dimen_25_dip"
        android:padding="18dp"/>


</RelativeLayout>