<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/fund_tag_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_10_dip"
        >

        <LinearLayout
            android:id="@+id/fund_signin_ll"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBack3"
                android:gravity="center"
                android:textSize="@dimen/common_text_size18"
                android:text="@string/fund_signin_title"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/fund_noobcontest_ll"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBack3"
                android:gravity="center"
                android:textSize="@dimen/common_text_size18"
                android:text="@string/fund_noobcontest_title"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/fund_zjzrechange_ll"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBack3"
                android:gravity="center"
                android:textSize="@dimen/common_text_size18"
                android:text="@string/fund_zjzrechange_title"
                />

        </LinearLayout>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/fund_party_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>
    <TextView
        android:id="@+id/fund_more_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fund_more_title"
        android:gravity="right|center_vertical"
        android:paddingRight="@dimen/dimen_10_dip"
        android:textSize="@dimen/common_text_size18"
        android:paddingTop="@dimen/dimen_5_dip"
        android:paddingBottom="@dimen/dimen_5_dip"
        />

    <RelativeLayout
        android:id="@+id/fund_zdjf_rl"
        android:layout_marginTop="@dimen/dimen_10_dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dimen_5_dip"
        android:paddingBottom="@dimen/dimen_5_dip"
        android:layout_marginLeft="@dimen/dimen_10_dip"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fund_zdjf_title"
                android:textSize="@dimen/common_text_size18"
                android:textColor="@color/colorBack3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fund_zdjf_content_title"
                android:textSize="@dimen/common_text_size16"
                android:textColor="@color/gray3"
                android:layout_marginTop="@dimen/dimen_5_dip"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dimen_10_dip"
            android:layout_centerVertical="true"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray3"
        android:textSize="@dimen/common_text_size18"
        android:text="@string/fund_news_title"
        android:layout_marginLeft="@dimen/dimen_10_dip"
        android:paddingTop="@dimen/dimen_5_dip"
        android:paddingBottom="@dimen/dimen_5_dip"

        />


</LinearLayout>
