<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white0"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dimen_10_dip"
            >

            <TextView
                android:layout_width="@dimen/dimen_50_dip"
                android:layout_height="wrap_content"
                android:text="@string/openshbankaccount_name"
                android:textColor="@color/colorBack3"
                android:textSize="@dimen/common_text_size16"
                android:gravity="center_vertical"
                />

            <EditText
                android:id="@+id/openshbankaccount_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_text_size16"
                android:gravity="center_vertical"
                android:background="@null"
                android:paddingBottom="@dimen/dimen_10_dip"
                android:paddingTop="@dimen/dimen_10_dip"
                android:hint="@string/openshbankaccount_name_hint"
                android:textColorHint="@color/gray3"
                android:paddingLeft="@dimen/dimen_10_dip"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray1"
            android:layout_marginLeft="@dimen/dimen_10_dip"
            android:layout_marginRight="@dimen/dimen_10_dip"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dimen_10_dip"
            android:layout_marginTop="@dimen/dimen_5_dip"
            >

            <TextView
                android:layout_width="@dimen/dimen_50_dip"
                android:layout_height="wrap_content"
                android:text="@string/openshbankaccount_idcard"
                android:textColor="@color/colorBack3"
                android:textSize="@dimen/common_text_size16"
                android:gravity="center_vertical"
                />

            <EditText
                android:id="@+id/openshbankaccount_idcard_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="@dimen/common_text_size16"
                android:gravity="center_vertical"
                android:background="@null"
                android:paddingBottom="@dimen/dimen_10_dip"
                android:paddingTop="@dimen/dimen_10_dip"
                android:hint="@string/openshbankaccount_idcard_hint"
                android:paddingLeft="@dimen/dimen_10_dip"
                android:textColorHint="@color/gray3"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray1"
            android:layout_marginLeft="@dimen/dimen_10_dip"
            android:layout_marginRight="@dimen/dimen_10_dip"
            />


    </LinearLayout>



    <Button
        android:id="@+id/openshbankaccount_next_btn"
        style="@style/login_reigster_btn_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openshbankaccount_next_tv"
        android:enabled="false"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen_50_dip"
        android:textColor="@color/white"
        />


</LinearLayout>
