<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/head_picture_ll">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimen_10_dip"
        android:paddingTop="@dimen/dimen_10_dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/pick_picture_background_corners">

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/persondetail_camera"
                android:textColor="@color/blue5"
                android:textSize="19sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.6dp"
                android:background="@color/gray3" />

            <TextView
                android:id="@+id/tv_graph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/persondetail_ablum"
                android:textColor="@color/blue5"
                android:textSize="19sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/pick_picture_background_corners"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/common_delete"
            android:textColor="@color/blue5"
            android:textSize="19sp" />

    </LinearLayout>


</RelativeLayout>
